# Deep-Hedging-under-Rough-Volatility

./: .gitignore  README.md  pyproject.toml
src/dhrv/: sde.py
src/dhrv/evaluation/: compare.py  mertrics.py  metrics.py  robustness.py  transaction_costs.py
src/dhrv/hedging/: delta_analytic.py  delta_heston.py  delta_pathwise.py  delta_rbergomi_proxy.py  ffn_hedger.py  losses.py  lstm_hedger.py  train.py
src/dhrv/models/: black_scholes.py  black_scholes_torch.py  fbm.py  heston.py  heston_torch.py  implied_vol.py  rbergomi.py  rbergomi_torch.py
src/dhrv/reports/: make_figures.py
src/dhrv/utils/: seeding.py
tests/: test_black_scholes.py  test_delta_pathwise.py  test_fbm.py  test_hedgers_shapes.py  test_heston.py  test_metrics.py  test_rbergomi.py  test_rbergomi_hybrid.py  test_rbergomi_proxy_hedge.py  test_rbergomi_smile.py  test_robustness.py  test_sde.py  test_train_bs_sanity_check.py  test_train_heston.py  test_train_rbergomi.py  test_train_rbergomi_lstm.py  test_transaction_costs.py
